[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/Asteroid 1.png" type="Texture" id=1]
[ext_resource path="res://scenes/objects/enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/open-sans/open-sans-bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sprites/c1 (36).png" type="Texture" id=4]
[ext_resource path="res://scenes/objects/deathParticles.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 270.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.184314, 0.164706, 0.164706, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.184314, 0.164706, 0.164706, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Theme" id=5]
Label/styles/normal = SubResource( 4 )
RichTextLabel/styles/normal = SubResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 36
font_data = ExtResource( 3 )

[node name="enemy" type="Area2D" groups=["enemies"]]
script = ExtResource( 2 )
deathParticle = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
z_index = 900
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.38419e-07, 2 )
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 1 )

[node name="container" type="Node2D" parent="."]
z_index = 4096

[node name="text" type="RichTextLabel" parent="container"]
unique_name_in_owner = true
margin_left = -97.0
margin_top = 35.0
margin_right = 67.0
margin_bottom = 82.0
rect_clip_content = false
theme = SubResource( 5 )
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = " KATOA "
text = " KATOA "
fit_content_height = true

[node name="cross" type="Sprite" parent="."]
visible = false
modulate = Color( 2.5, 1, 2.5, 1 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 3.33786e-06, -7.5 )
scale = Vector2( 3.1, 1.95 )

[connection signal="area_entered" from="." to="." method="_on_enemy_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_enemy_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
